# KLineLens

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Claude.md  LICENSE  MASTER_SPEC.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
Docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMMIT_LOG.md  CONFIG.md  DISCLAIMER.md  ENGINE_SPEC.md  I18N.md  PLAN.md  PRD.md  PROVIDER.md  TODO.md  UX_SPEC.md
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/scripts/: test_eh.py  test_eh_data.py
apps/api/src/: __init__.py  cache.py  config.py  database.py  main.py  websocket_manager.py
apps/api/src/providers/: __init__.py  alpaca_provider.py  alphavantage_provider.py  base.py  twelvedata_provider.py  yfinance_provider.py
apps/api/src/services/: __init__.py  llm_service.py  sim_trader_service.py
apps/api/tests/: __init__.py  test_analyze.py  test_bars.py  test_cache.py  test_health.py  test_providers.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tsconfig.tsbuildinfo
apps/web/public/: .gitkeep
docs/: API.md  ARCHITECTURE.md  BACKTEST_RESULTS.json  BUGS.md  CHANGELOG.md  COMMIT_LOG.md  CUSTOM_STRATEGY.md  DEPLOYMENT.md  DEV_QUICKSTART.md  DISCLAIMER.md  EH_SPEC.md  ENGINE_SPEC.md  EVALUATION.md  I18N.md  LLM_SPEC.md  PLAN.md  PRD.md  PROVIDER.md  SIM_TRADER_SPEC.md  TEST_PLAN.md  TODO.md  UX_SPEC.md
scripts/: run_backtest.py
(+22 files in other folders)
